--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <div class="addres_and_socialLinks">
@@ -197,7 +214,7 @@
                   <h1 style="font-family: myFirstFont">Flower</h1>
                   <button class="whiteOrderBtn">ORDER NOW</button>
                 </div>
-                <img src="./assets/pr1.png" style="visibility: hidden;" alt="" />
+                <img src="./assets/pr1.png" style="visibility: hidden" alt="" />
               </div>
             </div>
           </div>
@@ -212,6 +229,311 @@
         </div>
       </div>
     </div>
+    <section class="welcomeProduct">
+      <div class="welcomeText">
+        <h1 class="welcomeH1">
+          welcome to
+          <span class="LowKey" style="font-family: myFirstFont">LowKey</span>
+        </h1>
+        <h1 class="Dispensary" style="font-family: myFirstFont">Dispensary</h1>
+        <p>
+          At Lowkey we aim to level up each community by creating opportunities
+          for the local residents. Our goal is to work with our community in
+          Dorchester which has been disproportionately harmed by the past
+          prohibition of cannabis to ensure their inclusion in the legal
+          cannabis industry.
+        </p>
+        <div class="btnForWelcome">
+          <button class="whiteOrderBtn yellowBtn">read more</button>
+          <button class="btn2">event</button>
+        </div>
+      </div>
+      <img src="./assets/pr9.png" alt="" style="z-index: -100" />
+    </section>
+    <!-- marquee -->
+    <div class="margueeProduct">
+      <marquee
+        behavior="scroll"
+        direction="Left"
+        loop="-1"
+        class="marquee backgroundSelect"
+      >
+        <div style="display: flex; gap: 20px">
+          <div class="insideMarquee">
+            <img src="./assets/dot.png" alt="" />
+            <h1>#LIVELOWKEY</h1>
+          </div>
+          <div class="insideMarquee">
+            <img src="./assets/dot.png" alt="" />
+            <h1>#LIVELOWKEY</h1>
+          </div>
+          <div class="insideMarquee">
+            <img src="./assets/dot.png" alt="" />
+            <h1>#LIVELOWKEY</h1>
+          </div>
+          <div class="insideMarquee">
+            <img src="./assets/dot.png" alt="" />
+            <h1>#LIVELOWKEY</h1>
+          </div>
+          <div class="insideMarquee">
+            <img src="./assets/dot.png" alt="" />
+            <h1>#LIVELOWKEY</h1>
+          </div>
+          <div class="insideMarquee">
+            <img src="./assets/dot.png" alt="" />
+            <h1>#LIVELOWKEY</h1>
+          </div>
+          <div class="insideMarquee">
+            <img src="./assets/dot.png" alt="" />
+            <h1>#LIVELOWKEY</h1>
+          </div>
+          <div class="insideMarquee">
+            <img src="./assets/dot.png" alt="" />
+            <h1>#LIVELOWKEY</h1>
+          </div>
+          <div class="insideMarquee">
+            <img src="./assets/dot.png" alt="" />
+            <h1>#LIVELOWKEY</h1>
+          </div>
+          <div class="insideMarquee">
+            <img src="./assets/dot.png" alt="" />
+            <h1>#LIVELOWKEY</h1>
+          </div>
+          <div class="insideMarquee">
+            <img src="./assets/dot.png" alt="" />
+            <h1>#LIVELOWKEY</h1>
+          </div>
+          <div class="insideMarquee">
+            <img src="./assets/dot.png" alt="" />
+            <h1>#LIVELOWKEY</h1>
+          </div>
+          <div class="insideMarquee">
+            <img src="./assets/dot.png" alt="" />
+            <h1>#LIVELOWKEY</h1>
+          </div>
+          <div class="insideMarquee">
+            <img src="./assets/dot.png" alt="" />
+            <h1>#LIVELOWKEY</h1>
+          </div>
+        </div>
+      </marquee>
+    </div>
+
+    <!-- slider -->
+    <section class="sliderClass">
+      <img src="./assets/key_back.png" class="backSlider" alt="" />
+      <div class="content">
+        <p>PLACE AN ORDER FOR PICK UP</p>
+        <h2>Learn about strains to</h2>
+        <h1>improve your shopping experience</h1>
+      </div>
+      <!-- slider main -->
+
+      <section id="slider" class="pt-5">
+        <div class="container">
+          <div class="slider">
+            <div class="owl-carousel">
+              <div class="slider-card" style="background-color: white">
+                <img
+                  src="./assets/pr1.png"
+                  style="
+                    filter: none;
+                    height: 150px;
+                    width: 150px;
+                    margin-top: 20px;
+                  "
+                  alt=""
+                />
+                <br /><br /><br /><br />
+                <br /><br /><br /><br />
+                <br /><br /><br /><br />
+                <h1
+                  style="
+                    color: #5e3d98;
+                    font-family: 'Gill Sans', 'Gill Sans MT', Calibri,
+                      'Trebuchet MS', sans-serif;
+                  "
+                >
+                  Indica
+                </h1>
+                <p
+                  class="text-center p-4"
+                  style="margin-top: -30px; font-size: 16px"
+                >
+                  This strain provides intensely relaxing effects. Can help
+                  reduce nausea and pain and increase appetite. Because of its
+                  deep relaxation effects, Indica strains are better consumed at
+                  night.
+                </p>
+                <button
+                  class="whiteOrderBtn yellowBtn"
+                  style="margin-top: -20px"
+                >
+                  CHECK IT OUT
+                </button>
+              </div>
+              <div class="slider-card" style="background-color: white">
+                <img
+                  src="./assets/pr1.png"
+                  style="
+                    filter: none;
+                    height: 150px;
+                    width: 150px;
+                    margin-top: 20px;
+                  "
+                  alt=""
+                />
+                <br /><br /><br /><br />
+                <br /><br /><br /><br />
+                <br /><br /><br /><br />
+                <h1
+                  style="
+                    color: #5e3d98;
+                    font-family: 'Gill Sans', 'Gill Sans MT', Calibri,
+                      'Trebuchet MS', sans-serif;
+                  "
+                >
+                  Indica
+                </h1>
+                <p
+                  class="text-center p-4"
+                  style="margin-top: -30px; font-size: 16px"
+                >
+                  This strain provides intensely relaxing effects. Can help
+                  reduce nausea and pain and increase appetite. Because of its
+                  deep relaxation effects, Indica strains are better consumed at
+                  night.
+                </p>
+                <button
+                  class="whiteOrderBtn yellowBtn"
+                  style="margin-top: -20px"
+                >
+                  CHECK IT OUT
+                </button>
+              </div>
+              <div class="slider-card" style="background-color: white">
+                <img
+                  src="./assets/pr1.png"
+                  style="
+                    filter: none;
+                    height: 150px;
+                    width: 150px;
+                    margin-top: 20px;
+                  "
+                  alt=""
+                />
+                <br /><br /><br /><br />
+                <br /><br /><br /><br />
+                <br /><br /><br /><br />
+                <h1
+                  style="
+                    color: #5e3d98;
+                    font-family: 'Gill Sans', 'Gill Sans MT', Calibri,
+                      'Trebuchet MS', sans-serif;
+                  "
+                >
+                  Indica
+                </h1>
+                <p
+                  class="text-center p-4"
+                  style="margin-top: -30px; font-size: 16px"
+                >
+                  This strain provides intensely relaxing effects. Can help
+                  reduce nausea and pain and increase appetite. Because of its
+                  deep relaxation effects, Indica strains are better consumed at
+                  night.
+                </p>
+                <button
+                  class="whiteOrderBtn yellowBtn"
+                  style="margin-top: -20px"
+                >
+                  CHECK IT OUT
+                </button>
+              </div>
+              <div class="slider-card" style="background-color: white">
+                <img
+                  src="./assets/pr1.png"
+                  style="
+                    filter: none;
+                    height: 150px;
+                    width: 150px;
+                    margin-top: 20px;
+                  "
+                  alt=""
+                />
+                <br /><br /><br /><br />
+                <br /><br /><br /><br />
+                <br /><br /><br /><br />
+                <h1
+                  style="
+                    color: #5e3d98;
+                    font-family: 'Gill Sans', 'Gill Sans MT', Calibri,
+                      'Trebuchet MS', sans-serif;
+                  "
+                >
+                  Indica
+                </h1>
+                <p
+                  class="text-center p-4"
+                  style="margin-top: -30px; font-size: 16px"
+                >
+                  This strain provides intensely relaxing effects. Can help
+                  reduce nausea and pain and increase appetite. Because of its
+                  deep relaxation effects, Indica strains are better consumed at
+                  night.
+                </p>
+                <button
+                  class="whiteOrderBtn yellowBtn"
+                  style="margin-top: -20px"
+                >
+                  CHECK IT OUT
+                </button>
+              </div>
+              <div class="slider-card" style="background-color: white">
+                <img
+                  src="./assets/pr1.png"
+                  style="
+                    filter: none;
+                    height: 150px;
+                    width: 150px;
+                    margin-top: 20px;
+                  "
+                  alt=""
+                />
+                <br /><br /><br /><br />
+                <br /><br /><br /><br />
+                <br /><br /><br /><br />
+                <h1
+                  style="
+                    color: #5e3d98;
+                    font-family: 'Gill Sans', 'Gill Sans MT', Calibri,
+                      'Trebuchet MS', sans-serif;
+                  "
+                >
+                  Indica
+                </h1>
+                <p
+                  class="text-center p-4"
+                  style="margin-top: -30px; font-size: 16px"
+                >
+                  This strain provides intensely relaxing effects. Can help
+                  reduce nausea and pain and increase appetite. Because of its
+                  deep relaxation effects, Indica strains are better consumed at
+                  night.
+                </p>
+                <button
+                  class="whiteOrderBtn yellowBtn"
+                  style="margin-top: -20px"
+                >
+                  CHECK IT OUT
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end -->
+    </section>
     <br />
     <br />
     <br />
@@ -223,7 +545,14 @@
     <br />
     <br />
     <!-- end -->
+    <!-- for slider -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/script.js"></script>
     <!-- icons script -->
+
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
