--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+
+    <!-- swipper -->
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -534,18 +537,300 @@
       </section>
       <!-- end -->
     </section>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
+
+    <!-- VIP menu -->
+    <section class="VIPContents">
+      <h1 class="textBig">#LIVELOWKEY</h1>
+      <div class="vipCont">
+        <h1 class="h1">NEIGHBORHOOD</h1>
+        <div class="insideVIP">
+          <img src="./assets/backLowkey.png" alt="" />
+          <div class="vipH1andP">
+            <h1 class="strains">strains</h1>
+            <p>
+              Dorchester Diesel and Blue Hill Dreams are coming soon to LowKey
+              Dispensary! We offer a large variety of premium cannabis products
+              and soon we will be including our own lines of flower stains! Join
+              our Royalty Club to be the first to know about product drops,
+              specials, and dispensary news.
+            </p>
+            <button class="whiteOrderBtn yellowBtn">VIP PROGRAM JOIN</button>
+            <br />
+            <p style="margin-top: 10px">
+              Already a Member? <span style="color: #fcd300">Log-in here</span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end -->
+    <!-- latest videos -->
+    <div class="mainSwiperAndLatest">
+      <img src="./assets/key_back.png" class="imgBack" alt="" />
+      <div class="latestH1andP">
+        <p style="z-index: 10">LEARNING ABOUT CANNABIS</p>
+        <h1 style="z-index: 10">Latest Videos News & Articles.</h1>
+      </div>
+
+      <section class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="card swiper-slide">
+            <div class="card_image">
+              <img src="./assets/latestBack.jfif" alt="" />
+              <div class="tredingIMg">
+                <img src="./assets/fire (1).png" alt="" />
+                <h1>trending</h1>
+              </div>
+            </div>
+            <div class="card_content">
+              <span class="card_title">The Truth About Cannabis</span>
+              <p class="card_text">
+                From super-strong flower and potent concentrates to
+                slow-to-kick-in edibles, it’s easy to....
+              </p>
+              <button class="cardBtn">view more ></button>
+            </div>
+          </div>
+
+          <div class="card swiper-slide">
+            <div class="card_image">
+              <img src="./assets/latestBack.jfif" alt="" />
+              <div class="tredingIMg">
+                <img src="./assets/fire (1).png" alt="" />
+                <h1>trending</h1>
+              </div>
+            </div>
+            <div class="card_content">
+              <span class="card_title">The Truth About Cannabis</span>
+              <p class="card_text">
+                From super-strong flower and potent concentrates to
+                slow-to-kick-in edibles, it’s easy to....
+              </p>
+              <button class="cardBtn">view more ></button>
+            </div>
+          </div>
+
+          <div class="card swiper-slide">
+            <div class="card_image">
+              <img src="./assets/latestBack.jfif" alt="" />
+              <div class="tredingIMg">
+                <img src="./assets/fire (1).png" alt="" />
+                <h1>trending</h1>
+              </div>
+            </div>
+            <div class="card_content">
+              <span class="card_title">The Truth About Cannabis</span>
+              <p class="card_text">
+                From super-strong flower and potent concentrates to
+                slow-to-kick-in edibles, it’s easy to....
+              </p>
+              <button class="cardBtn">view more ></button>
+            </div>
+          </div>
+
+          <div class="card swiper-slide">
+            <div class="card_image">
+              <img src="./assets/latestBack.jfif" alt="" />
+              <div class="tredingIMg">
+                <img src="./assets/fire (1).png" alt="" />
+                <h1>trending</h1>
+              </div>
+            </div>
+            <div class="card_content">
+              <span class="card_title">The Truth About Cannabis</span>
+              <p class="card_text">
+                From super-strong flower and potent concentrates to
+                slow-to-kick-in edibles, it’s easy to....
+              </p>
+              <button class="cardBtn">view more ></button>
+            </div>
+          </div>
+
+          <div class="card swiper-slide">
+            <div class="card_image">
+              <img src="./assets/latestBack.jfif" alt="" />
+              <div class="tredingIMg">
+                <img src="./assets/fire (1).png" alt="" />
+                <h1>trending</h1>
+              </div>
+            </div>
+            <div class="card_content">
+              <span class="card_title">The Truth About Cannabis</span>
+              <p class="card_text">
+                From super-strong flower and potent concentrates to
+                slow-to-kick-in edibles, it’s easy to....
+              </p>
+              <button class="cardBtn">view more ></button>
+            </div>
+          </div>
+
+          <div class="card swiper-slide">
+            <div class="card_image">
+              <img src="./assets/latestBack.jfif" alt="" />
+              <div class="tredingIMg">
+                <img src="./assets/fire (1).png" alt="" />
+                <h1>trending</h1>
+              </div>
+            </div>
+            <div class="card_content">
+              <span class="card_title">The Truth About Cannabis</span>
+              <p class="card_text">
+                From super-strong flower and potent concentrates to
+                slow-to-kick-in edibles, it’s easy to....
+              </p>
+              <button class="cardBtn">read more ></button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="btnCard">
+        <button class="whiteOrderBtn yellowBtn">view more</button>
+      </div>
+    </div>
+    <!-- end -->
+    <!-- connect us -->
+    <section class="connectUs">
+      <div class="flexClass">
+        <div class="lowkeydispensaryAndImg">
+          <h1>lowkeydispensary</h1>
+          <div class="imgs">
+            <img src="./assets/con01.png" alt="" />
+            <img src="./assets/con02.png" alt="" />
+            <img src="./assets/con03.png" alt="" />
+            <img src="./assets/con04.png" alt="" />
+          </div>
+        </div>
+        <div class="connectContent">
+          <div class="connectCon1">
+            <h1>CONNECT</h1>
+            <h1 class="defFromH1">WITH US</h1>
+            <h2>QUESTIONS? WE HAVE ANSWERS!</h2>
+            <p>
+              At LowKey we have friendly staff that are always available to
+              answer any questions. Please contact us directly via our contact
+              form or email.
+            </p>
+            <div class="socialLinksConnection">
+              <div>
+                <img src="./assets/localtion.png" alt="" />
+                <p>571B Washington Street Dorchester, MA 02124</p>
+              </div>
+              <div>
+                <img src="./assets/email.png" alt="" />
+                <p>info@lowkeydispensary.com</p>
+              </div>
+            </div>
+          </div>
+          <div class="connectCon2">
+            <div>
+              <p>name</p>
+              <input type="text" name="" id="" />
+
+              <p>email</p>
+              <input type="text" name="" id="" />
+              <p>message</p>
+              <textarea name="" id=""></textarea>
+              <button class="whiteOrderBtn yellowBtn">submit</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end -->
+    <!-- sign up for vip -->
+    <section class="vipSIgnup">
+      <h1 class="LIVELOWKEY">#LIVELOWKEY</h1>
+      <div class="insideVIP">
+        <div class="imgVIP"><img src="./assets/signUpVIP.png" alt="" /></div>
+        <div>
+          <h2>Sign up for our</h2>
+          <h1>Royalty Club</h1>
+          <p>
+            Join our Royalty Club to be the first to know about product drops,
+            specials, and dispensary news.
+          </p>
+          <button class="whiteOrderBtn yellowBtn">VIP PROGRAM JOIN</button>
+          <p class="loginPara">Already a Member?<span>Log-in here</span></p>
+        </div>
+      </div>
+    </section>
+    <!-- end -->
+    <!-- footer -->
+    <footer>
+      <div class="logoAndPara">
+        <img src="./assets/logo.png" alt="" />
+        <br /><br />
+        <p>
+          At Lowkey we aim to level up each community by creating opportunities
+          for the local residents. Our goal is to work with our community in
+          Dorchester which has been disproportionately harmed by the past
+          prohibition of cannabis to ensure their inclusion in the legal
+          cannabis industry.
+        </p>
+      </div>
+      <div class="Explore">
+        <h1>Explore</h1>
+        <div class="Explore01">
+          <div>
+            <ul>
+              <li>shop</li>
+              <li>specials</li>
+              <li>about us</li>
+              <li>events</li>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li>loyalty</li>
+              <li>news</li>
+              <li>video blogs</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="GetInTouch">
+        <h1>GET IN TOUCH</h1>
+        <div class="logosSocial">
+          <div>
+            <img src="./assets/localtion.png" alt="" />
+            <p>571B Washington Street Dorchester, MA 02124</p>
+          </div>
+          <div>
+            <img src="./assets/email.png" alt="" />
+            <p>info@lowkeydispensary.com</p>
+          </div>
+          <div>
+            <img src="./assets/time.png" alt="" />
+            <p>Monday to Sunday - 10AM - 9PM</p>
+          </div>
+          <div>
+            <img src="./assets/phone.png" alt="" />
+            <p>617 485 1995</p>
+          </div>
+        </div>
+      </div>
+      <div class="followLinks">
+        <h1>FOLLOW US</h1>
+        <div>
+          <img src="./assets/inst.png" alt="logo-instagram" /><img
+            src="./assets/youtube.png"
+            alt="youtube"
+          /><img src="./assets/linkedin.png" alt="linkedin" /><img
+            src="./assets/facebook.png"
+            alt="facebook"
+          /><img src="./assets/x.png" alt="x" />
+        </div>
+      </div>
+    </footer>
+    <div class="lastFlex">
+      <p>© Copyright - 2021 LowKey LLC. All Rights Reserved.</p>
+      <p>Privacy Policy</p>
+    </div>
+    <!-- end -->
+   
     <!-- end -->
     <!-- for slider -->
+    <script src="./js/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
