--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- swipper -->
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -57,7 +58,29 @@
           <a href="#">video blogs</a>
           <button>contact us</button>
         </div>
+        <button class="menuBtn">
+          <ion-icon name="menu-outline"></ion-icon>
+        </button>
       </nav>
+
+      <!-- mobile nav bar -->
+      <section class="mobileNavView hideNav">
+        <img src="./assets/logo.png" id="logo" alt="logo" />
+        <div class="links">
+          <a href="#">shop</a>
+          <a href="#">specials</a>
+          <a href="#">about us </a>
+          <a href="">events</a>
+          <a href="#">loyalty</a>
+          <a href="#">news</a>
+          <a href="#">video blogs</a>
+          <button>contact us</button>
+        </div>
+        <button class="corss">
+          <ion-icon name="close-circle-outline"></ion-icon>
+        </button>
+      </section>
+      <!-- end -->
       <!-- herosection -->
       <div class="heroSection">
         <div class="heroContant">
@@ -150,13 +173,13 @@
     <br />
     <br />
     <br />
-    <div style="display: flex; align-items: center; justify-content: center">
-      <div class="">
-        <div class="productsCategory">
-          <h1 style="font-size: 100px; font-family: myFirstFont">LowKey</h1>
-          <h1 style="font-size: 40px">products category</h1>
-        </div>
-        <br /><br /><br />
+    <div style="width: 100vw" class="productCat">
+      <div class="productsCategory">
+        <h1 style="font-size: 100px; font-family: myFirstFont">LowKey</h1>
+        <h1 style="font-size: 40px">products category</h1>
+      </div>
+      <br /><br /><br />
+      <div class="mainFLexClass">
         <div class="product01">
           <div class="mainProduct">
             <div style="display: flex; flex-flow: column">
@@ -229,6 +252,78 @@
             </div>
             <img src="./assets/pr5.png" alt="" />
           </div>
+        </div>
+      </div>
+      <div class="mobileShow">
+        <div class="mainProduct">
+          <div style="display: flex; flex-flow: column">
+            <h1 style="font-family: myFirstFont">Flower</h1>
+            <br />
+            <button class="whiteOrderBtn">ORDER NOW</button>
+          </div>
+          <img src="./assets/pr1.png" alt="" />
+        </div>
+
+        <div
+          class="mainProduct"
+          style="background-image: url(./assets/m02.png)"
+        >
+          <div style="display: flex; flex-flow: column">
+            <h1 style="font-family: myFirstFont">Flower</h1>
+            <br />
+            <button class="whiteOrderBtn">ORDER NOW</button>
+          </div>
+          <img src="./assets/m02p.png" alt="" />
+        </div>
+        <div
+          class="mainProduct"
+          style="background-image: url(./assets/m03.png)"
+        >
+          <div style="display: flex; flex-flow: column">
+            <h1 style="font-family: myFirstFont">Flower</h1>
+            <br />
+            <button class="whiteOrderBtn">ORDER NOW</button>
+          </div>
+          <img src="./assets/m03p.png" alt="" />
+        </div>
+        <div
+          class="mainProduct"
+          style="background-image: url(./assets/m04.png)"
+        >
+          <div style="display: flex; flex-flow: column">
+            <h1 style="font-family: myFirstFont">Flower</h1>
+            <br />
+            <button class="whiteOrderBtn">ORDER NOW</button>
+          </div>
+          <img src="./assets/m04p.png" alt="" />
+        </div>
+
+        <div
+          class="mainProduct"
+          style="background-image: url(./assets/m05.png)"
+        >
+          <div style="display: flex; flex-flow: column">
+            <h1 style="font-family: myFirstFont">Flower</h1>
+            <br />
+            <button class="whiteOrderBtn">ORDER NOW</button>
+          </div>
+          <img src="./assets/m06p.png" alt="" />
+        </div>
+        <div class="mainProduct">
+          <div style="display: flex; flex-flow: column">
+            <h1 style="font-family: myFirstFont">Flower</h1>
+            <br />
+            <button class="whiteOrderBtn">ORDER NOW</button>
+          </div>
+          <img src="./assets/pr1.png" alt="" />
+        </div>
+        <div class="mainProduct">
+          <div style="display: flex; flex-flow: column">
+            <h1 style="font-family: myFirstFont">Flower</h1>
+            <br />
+            <button class="whiteOrderBtn">ORDER NOW</button>
+          </div>
+          <img src="./assets/pr1.png" alt="" />
         </div>
       </div>
     </div>
@@ -756,78 +851,81 @@
     </section>
     <!-- end -->
     <!-- footer -->
-    <footer>
-      <div class="logoAndPara">
-        <img src="./assets/logo.png" alt="" />
-        <br /><br />
-        <p>
-          At Lowkey we aim to level up each community by creating opportunities
-          for the local residents. Our goal is to work with our community in
-          Dorchester which has been disproportionately harmed by the past
-          prohibition of cannabis to ensure their inclusion in the legal
-          cannabis industry.
-        </p>
-      </div>
-      <div class="Explore">
-        <h1>Explore</h1>
-        <div class="Explore01">
-          <div>
-            <ul>
-              <li>shop</li>
-              <li>specials</li>
-              <li>about us</li>
-              <li>events</li>
-            </ul>
-          </div>
-          <div>
-            <ul>
-              <li>loyalty</li>
-              <li>news</li>
-              <li>video blogs</li>
-            </ul>
+    <div class="footer">
+      <footer>
+        <div class="logoAndPara">
+          <img src="./assets/logo.png" alt="" />
+          <br /><br />
+          <p>
+            At Lowkey we aim to level up each community by creating
+            opportunities for the local residents. Our goal is to work with our
+            community in Dorchester which has been disproportionately harmed by
+            the past prohibition of cannabis to ensure their inclusion in the
+            legal cannabis industry.
+          </p>
+        </div>
+        <div class="Explore">
+          <h1>Explore</h1>
+          <div class="Explore01">
+            <div>
+              <ul>
+                <li>shop</li>
+                <li>specials</li>
+                <li>about us</li>
+                <li>events</li>
+              </ul>
+            </div>
+            <div>
+              <ul>
+                <li>loyalty</li>
+                <li>news</li>
+                <li>video blogs</li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="GetInTouch">
-        <h1>GET IN TOUCH</h1>
-        <div class="logosSocial">
-          <div>
-            <img src="./assets/localtion.png" alt="" />
-            <p>571B Washington Street Dorchester, MA 02124</p>
-          </div>
-          <div>
-            <img src="./assets/email.png" alt="" />
-            <p>info@lowkeydispensary.com</p>
-          </div>
-          <div>
-            <img src="./assets/time.png" alt="" />
-            <p>Monday to Sunday - 10AM - 9PM</p>
-          </div>
-          <div>
-            <img src="./assets/phone.png" alt="" />
-            <p>617 485 1995</p>
+        <div class="GetInTouch">
+          <h1>GET IN TOUCH</h1>
+          <div class="logosSocial">
+            <div>
+              <img src="./assets/localtion.png" alt="" />
+              <p>571B Washington Street Dorchester, MA 02124</p>
+            </div>
+            <div>
+              <img src="./assets/email.png" alt="" />
+              <p>info@lowkeydispensary.com</p>
+            </div>
+            <div>
+              <img src="./assets/time.png" alt="" />
+              <p>Monday to Sunday - 10AM - 9PM</p>
+            </div>
+            <div>
+              <img src="./assets/phone.png" alt="" />
+              <p>617 485 1995</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="followLinks">
-        <h1>FOLLOW US</h1>
-        <div>
-          <img src="./assets/inst.png" alt="logo-instagram" /><img
-            src="./assets/youtube.png"
-            alt="youtube"
-          /><img src="./assets/linkedin.png" alt="linkedin" /><img
-            src="./assets/facebook.png"
-            alt="facebook"
-          /><img src="./assets/x.png" alt="x" />
+        <div class="followLinks">
+          <h1>FOLLOW US</h1>
+          <div>
+            <img src="./assets/inst.png" alt="logo-instagram" /><img
+              src="./assets/youtube.png"
+              alt="youtube"
+            /><img src="./assets/linkedin.png" alt="linkedin" /><img
+              src="./assets/facebook.png"
+              alt="facebook"
+            /><img src="./assets/x.png" alt="x" />
+          </div>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
+
     <div class="lastFlex">
       <p>© Copyright - 2021 LowKey LLC. All Rights Reserved.</p>
       <p>Privacy Policy</p>
     </div>
     <!-- end -->
-   
+
     <!-- end -->
     <!-- for slider -->
     <script src="./js/swiper-bundle.min.js"></script>
